Ajustes de textos

--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -23,7 +23,7 @@
                         <div class="header-ecored">
                             <h1 class="texto-morado" id="tema-10">1. Conceptos de pre-patronaje</h1>
                         </div>
-                        <p class="mt-5 pr-2 pr-md-5">El cuerpo humano es una estructura base que se debe entender para poder <strong>interpretar su comportamiento y sus necesidades vestimentales</strong>. Para lo cual se deben tener en cuenta los siguientes conceptos </p>
+                        <p class="mt-5 pr-2 pr-md-5">El cuerpo humano es una estructura base que se debe entender para poder <strong>interpretar su comportamiento y sus necesidades vestimentales</strong>. Para lo cual es fundamental tener en cuenta los siguientes conceptos </p>
                     </div>
                     <div class="col-12 text-center"> <img class="img-fluid mt-5" src="assets/images/pages/tema-1/tema-1-2.svg" /></div>
                 </div>
@@ -174,8 +174,8 @@
                             <div class="row">
                                 <div class="col-4"> <img class="img-fluid" src="assets/images/pages/tema-1/tema-1-12.svg" /></div>
                                 <div class="col-8 text-left">
-                                    <h3 class="font-weight-normal texto-morado">Posición <strong>anatómica</strong> </h3>
-                                    <p class="mt-5">Es aquella que se considera adecuada para el estudio anatómico del cuerpo humano. consiste en:</p>
+                                    <h3 class="font-weight-normal texto-morado">Posición <strong>neutra</strong> </h3>
+                                    <p class="mt-5">Es la posición natural de la columna cuando se mantienen sus 3 curvas fisiológicas. A diferencia de la anatómica las palmas de las manos descansan sobre el cuerpo en los laterales del muslo.</p>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="col-12 col-md-6"> <img class="img-fluid" src="assets/images/pages/tema-1/tema-1-14.svg" /></div>
                     <div class="col-12 col-md-6">
-                        <h1 class="mt-5">Estudio de las <strong class="texto-morado">proporciones y las medidas del cuerpo humano.</strong> </h1>
+                        <h1 class="mt-5">Es el estudio de las <strong class="texto-morado">proporciones y las medidas del cuerpo humano.</strong> </h1>
                     </div>
                 </div>
             </div>
@@ -279,7 +279,7 @@
                 <div class="row ml-md-5 my-5">
                     <div class="col-12">
                         <h2 class="texto-morado">Biomecánica</h2>
-                        <p class="mt-5">Es un área de conocimiento que <strong>estudia la actividad física de nuestro cuerpo en circunstancias y condiciones diferentes</strong>; analiza las consecuencias mecánicas que se derivan de esas actividades en nuestra vida cotidiana, en el trabajo, haciendo deporte, etc.</p>
+                        <p class="mt-5">Es un área de conocimiento que <strong>estudia la actividad física del cuerpo en circunstancias y condiciones diferentes</strong>; analiza las consecuencias mecánicas que se derivan de esas actividades en la vida cotidiana, en el trabajo, haciendo deporte, etc.</p>
                     </div>
                     <div class="col-12 mt-5 text-center"> <img class="img-fluid" src="assets/images/pages/tema-1/tema-1-16.svg" /><img class="img-fluid mt-5" src="assets/images/pages/tema-1/tema-1-17.svg" /></div>
                 </div>
@@ -298,7 +298,7 @@
                         </div>
                         <div class="col-12 text-left">
                             <p class="mt-5">Se caracteriza por tener estructura delgada y huesos largo, poca grasa y poco músculo. </p>
-                            <p class="mt-5"><strong>Complexión delgada,</strong> estructura fina, fibroso, no gana peso con facilidad, metabolismo rápido, pecho plano, hombros pequeños.</p>
+                            <p class="mt-5"><strong>Complexión delgada,</strong> estructura fina, fibroso, no gana peso con facilidad, metabolismo rápido, pecho plano y hombros pequeños.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 text-center"> <img class="img-fluid" src="assets/images/pages/tema-1/tema-1-19.svg" />
@@ -307,7 +307,7 @@
                         </div>
                         <div class="col-12 text-left">
                             <p class="mt-5">Se distingue por tener una musculatura natural y poca grasa. Los huesos son largos y semi-gruesos. <strong>Se dice que es el ideal para el físico constructivo.</strong> </p>
-                            <p class="mt-5"><strong>Complexión atlética,</strong> cuerpo duro con músculos definidos, es fuerte de forma natura, gana músculo fácilmente, engorda con más facilidad que los ectomorfos, hombros anchos.</p>
+                            <p class="mt-5"><strong>Complexión atlética,</strong> cuerpo duro con músculos definidos, es fuerte de forma natural, gana músculo fácilmente, engorda con más facilidad que los ectomorfos y hombros anchos.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 text-center"> <img class="img-fluid" src="assets/images/pages/tema-1/tema-1-20.svg" />
@@ -316,7 +316,7 @@
                         </div>
                         <div class="col-12 text-left">
                             <p class="mt-5">Se distingue por tener un cuerpo grande de huesos gruesos, con mucha grasa y con gran facilidad para obtener más de ésta. </p>
-                            <p class="mt-5"><strong>Complexión blanda y redonda,</strong> suele ser bajo y fornido, gana músculo fácilmente, engorda fácilmente, le cuesta perder grasa, metabolismo lento, hombros anchos.</p>
+                            <p class="mt-5"><strong>Complexión blanda y redonda,</strong> suele ser bajo y fornido, gana músculo fácilmente, engorda fácilmente, le cuesta perder grasa, metabolismo lento y hombros anchos.</p>
                         </div>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h1 class="texto-gris">La gran mayoría de nosotros somos <strong class="texto-morado">una combinación de dos somatotipos.</strong></h1>
-                        <p class="mt-4">Las más comunes son: <strong>mesoectomorfo - mesoenfomorfo.</strong></p>
+                        <p class="mt-4">Las más comunes son: <strong>mesoectomorfo y mesoenfomorfo.</strong></p>
                     </div>
                     <div class="col-12 mt-4 text-center"> <img class="img-fluid" src="assets/images/pages/tema-2/tema-2-1.svg" /></div>
                 </div>
@@ -381,7 +381,7 @@
                     <div class="row mt-5 ml-md-5 pr-5 mr-md-5">
                         <div class="col-12">
                             <h2 class="texto-morado">Evaluación de aplomos - postura</h2>
-                            <p class="mt-4">Asociado a la correlación entre las extremidades y el tronco y a las posiciones de las articulaciones.</p>
+                            <p class="mt-4">Asociado a la correlación entre las extremidades y el tronco, con las posiciones de las articulaciones</p>
                             <div class="row mt-4">
                                 <div class="col text-right"> <img class="img-fluid" src="assets/images/icons/vineta.svg" /></div>
                                 <div class="col-10 text-left">
@@ -516,7 +516,7 @@
                     </div>
                     <div class="col-12 pr-5 mt-5">
                         <div class="col-12">
-                            <p>En confección: Se utiliza la pulgada para como medida de estandarización que mide el número de puntadas por pulgada PPP:</p>
+                            <p>En confección se utiliza la pulgada para como medida de estandarización que mide el número de puntadas por pulgada PPP:</p>
                         </div>
                         <div class="row mt-5">
                             <div class="col text-right"> <img class="img-fluid" src="assets/images/icons/vineta.svg" /></div>
@@ -550,10 +550,10 @@
                     <div class="col-12 mt-5 pl-md-5 pb-5 border-bot-morado">
                         <h3 class="mb-0 mt-5 texto-morado">Sistema métrico decimal o universal </h3>
                         <p class="mt-5"> Es un sistema de unidades en el cual los múltiplos o submúltiplos de las unidades de una misma naturaleza siguen una escala decimal (10). </p>
-                        <p class="mt-5"><strong>En confección:</strong> se utiliza para verificar medidas finales de la prenda. Los rangos de tolerancia de una costura se miden en milímetros.</p>
+                        <p class="mt-5"><strong>En confección:</strong> Se utiliza para verificar medidas finales de la prenda. Los rangos de tolerancia de una costura se miden en milímetros.</p>
                         <p>▪ Algunos Insumos de confección, se caracterizan por centímetros.</p>
                         <p>▪ El ancho de los materiales textiles se mide en centímetros. Los textiles al detal se venden por metros.</p>
-                        <p class="mt-5"><strong>En patronaje:</strong> la mayoría de los cuadros de tallas anatómicas e industriales, en todas las líneas, están construidos en centímetros que es el sistema métrico estandarizado para el proceso de toma de medidas, patronaje y corte de las prendas. Las reducciones o ampliaciones para el confort de la prenda se realizan en centímetros.</p>
+                        <p class="mt-5"><strong>En patronaje:</strong> La mayoría de los cuadros de tallas anatómicas e industriales, en todas las líneas, están construidos en centímetros que es el sistema métrico estandarizado para el proceso de toma de medidas, patronaje y corte de las prendas. Las reducciones o ampliaciones para el confort de la prenda se realizan en centímetros.</p>
                         <div class="col-12 mt-5 text-center">
                             <p class="font-weight-bold">El centímetro</p><img class="img-fluid mt-2" src="assets/images/pages/tema-2/tema-2-29.svg" />
                             <h3 class="mt-3 texto-morado">1 centímetro = 1 cm </h3>
@@ -1584,7 +1584,6 @@
                     <h2 class="texto-morado">1.3.2. Cuadros de Tallas</h2>
                 </div>
                 <div class="col-12 px-5">
-                    <p>Expresión breve y precisa del modo de hacer, resolver o conseguir algo. Calculo estandarizado para obtener un resultado.</p>
                     <p class="mt-5"><strong class="texto-morado">▪ Anatómicos y Deducidos:</strong> de acuerdo con la obtención de medidas.</p>
                     <p class="mt-2"><strong class="texto-morado">▪ Proporcionales:</strong> existe una secuencia numérica en el crecimiento de la talla.</p>
                     <p class="mt-2"><strong class="texto-morado">▪ No proporcionales:</strong> no existe una secuencia numérica en el crecimiento de la talla.</p>
@@ -2400,18 +2399,24 @@
                             </div>
                             <div class="col-8">
                                 <div class="tab-content" id="v-pills-tabContent">
-                                    <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1-tab">...</div>
-                                    <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">...</div>
+                                    <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1-tab">Identificar qué tipo de plano se va a trabajar, si es un plano unido, separado o montado.</div>
+                                    <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">Todo básico inicia siempre desde un rectángulo, el cual se traza con la medida de contorno más protuberante y el largo más largo de la parte del cuerpo a trabajar</div>
                                     <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3-tab">
                                         <div class="col-12 px-4 align-self-center mt-5">
-                                            <p>Por lo general el trazo de moldes se suele hacer con papel trazo o manifold, dicho papel tiene dos caras, una cara que al tacto es liso y visualmente brillante; otra que al tacto es corrugada y visualmente opaca. Por lo general se recomienda trabajar por la parte corrugada con el fin de tener una mejor adhesión del grafito (lápiz) y de no permitir que rebote la luz, es recomendable trabajar en papel blanco con el fin de no cansar la vista y descansar la mente.</p>
+                                            <p>Por lo general el manual trabaja con fórmulas o convenciones, en la mayoría de los casos la medida más protuberante es sustituida por una letra, por ejemplo, en infantil, contorno de pecho (medida más protuberante de la cintura para arriba) equivale o es igual a la letra "B"</p>
                                             <h3 class="mt-5 mb-0"> B = Contorno de pecho de la talla a trabajar.</h3>
                                             <h3><strong>Talla 6: B = 68Cm</strong> (Contorno de pecho del cuadro de tallas correspondiente a la talla 6).</h3>
                                         </div>
                                     </div>
-                                    <div class="tab-pane fade" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">...</div>
-                                    <div class="tab-pane fade" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-5-tab">...</div>
-                                    <div class="tab-pane fade" id="v-pills-6" role="tabpanel" aria-labelledby="v-pills-6-tab">...</div>
+                                    <div class="tab-pane fade" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">El largo inicial del rectángulo se trabaja con la medida más larga de la parte del cuerpo a trabajar, por ejemplo en el pantalón es: largo de pantalón, en la falda: altura de rodilla, en el superior: largo de talle posterior.</div>
+                                    <div class="tab-pane fade" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-5-tab">
+                                        <div class="col-12 px-4 align-self-center mt-5">
+                                            <p>Las medidas que se trabajan en la metodología en algunos casos únicamente se saca del cuadro de talla, la medida de contorno y largo, no se trabajan medidas como hombro, anchos, cuello y demás. Dichas medidas salen por formula o como se trabaja en temas anteriores por medidas deducidas.</p>
+                                            <h3 class="mt-5 mb-0"> En infantil la medida de cuello posterior equivale a:</h3>
+                                            <h3><strong>B/20+2.5</strong> = B (Contorno de pecho) / 20 + 2.5</h3>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="v-pills-6" role="tabpanel" aria-labelledby="v-pills-6-tab">Por lo general el trazo de moldes se suele hacer con papel trazo o manifold, dicho papel tiene dos caras, una cara que al tacto es liso y visualmente brillante; otra que al tacto es corrugada y visualmente opaca. Por lo general se recomienda trabajar por la parte corrugada con el fin de tener una mejor adhesión del grafito (lápiz) y de no permitir que rebote la luz, es recomendable trabajar en papel blanco con el fin de no cansar la vista y descansar la mente.</div>
                                 </div>
                             </div>
                         </div>
@@ -2585,7 +2590,7 @@
                     <h2 class="texto-morado" id="tema-17">1.7 Elaboración de básicos femeninos</h2>
                 </div>
                 <p class="mt-5">Cómo se referencia en temas anteriores, se debe iniciar revisando y analizando el cuadro de tallas para identificar: la talla, las medidas, incrementos y diferencias que se va a trabajar. El desarrollo de básicos funciona de la siguiente forma:</p>
-                <p class="mt-5">▪ Tipo de plano: identificar qué tipo de plano se va a trabajar, si es un plano unido, separado o montado.</p>
+                <p class="mt-5"><strong>▪ Tipo de Plano:</strong> identificar qué tipo de plano se va a trabajar, si es un plano unido, separado o montado.</p>
                 <p class="mt-5"><strong>▪ Rectángulo:</strong> todo básico inicia siempre desde un rectángulo, el cual se traza con la medida de contorno más protuberante y el largo más largo de la parte del cuerpo a trabajar.</p>
                 <p class="mt-5"><strong>▪ Cuadro de tallas:</strong> en el caso de femenino, para la elaboración de los básicos se trabaja con las medidas del cuadro de tallas, es decir cada punto de referencia sobre el cuerpo es trabajado del cuadro de tallas, a diferencia de lo anterior, este desarrollo hace necesario identificar todo el listado de las medidas que se van a implementar para hacer el desarrollo.</p>
                 <p class="my-5"><strong>▪ Manejo del papel:</strong> por lo general el trazo de moldes se suele hacer con papel trazo o manifold, dicho papel tiene dos caras, una cara que al tacto es liso y visualmente brillante y otra que al tacto es corrugada y visualmente opaca, por lo general se recomienda trabajar por la parte corrugada con el fin de tener una mejor adhesión del grafito (lápiz) y de no permitir que rebote la luz, es recomendable trabajar en papel blanco con el fin de no cansar la vista y descansar la mente.</p>
