--- a/public/pages/tema-2.html
+++ b/public/pages/tema-2.html
@@ -257,7 +257,7 @@
                                 <div class="collapse show" id="collapse2" aria-labelledby="heading2" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-12 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-31.png" /></div>
+                                            <div class="col-12 col-md-12 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-31.png" /></div>
                                         </div>
                                     </div>
                                 </div>
@@ -271,12 +271,12 @@
                                 <div class="collapse show" id="collapse3" aria-labelledby="heading3" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-6 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-32.png" /></div>
-                                            <div class="col-6 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-33.png" /></div>
+                                            <div class="col-6 col-md-6 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-32.png" /></div>
+                                            <div class="col-6 col-md-6 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-33.png" /></div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-6 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-34.png" /></div>
-                                            <div class="col-6 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-35.png" /></div>
+                                            <div class="col-6 col-md-6 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-34.png" /></div>
+                                            <div class="col-6 col-md-6 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-35.png" /></div>
                                         </div>
                                     </div>
                                 </div>
@@ -290,7 +290,7 @@
                                 <div class="collapse show" id="collapse4" aria-labelledby="heading4" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-12 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-36.png" /></div>
+                                            <div class="col-12 col-md-12 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-36.png" /></div>
                                         </div>
                                     </div>
                                 </div>
@@ -304,7 +304,7 @@
                                 <div class="collapse show" id="collapse5" aria-labelledby="heading5" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-12 col-md-4 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-37.png" /></div>
+                                            <div class="col-12 col-md-12 text-center"><img class="img-fluid" src="assets/images/pages/tema-5/tema-5-37.png" /></div>
                                         </div>
                                     </div>
                                 </div>
@@ -678,7 +678,7 @@
                                     <h3 class="mb-0">Punta de aguja</h3>
                                 </div>
                                 <p class="mt-5">Determina el tipo de tejido a coser, desde el más fino hasta el más pesado.
-                                <div class="col-12 ml-1 ml-md-4 mb-4"> <a href="media/documentos/PuntasdeDesplazamiento_Groz-Beckert.pdf">
+                                <div class="col-12 ml-1 ml-md-4 mb-4"> <a href="media/documentos/PuntasdeDesplazamiento_Groz-Beckert.pdf" target="_blank">
                                         <div class="col-12 col-md-7 mt-5 rounded bg-morado-ligero">
                                             <div class="row py-3 px-3">
                                                 <div class="col d-none d-lg-flex"> <img class="img-fluid" src="assets/images/icons/anexo-button.svg" /></div>
