--- a/public/material.html
+++ b/public/material.html
@@ -71,7 +71,7 @@
                                     <li class="list-group-item nav-tema-item">
                                         <div class="row align-items-center">
                                             <div class="col-auto">
-                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold">0</span></div>
+                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold"> <i class="fa fa-file-text-o"></i></span></div>
                                             </div>
                                             <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/tema-1/">Introducción</a></span></div>
                                             <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/tema-1/">Ver más</a></div>
@@ -838,7 +838,7 @@
                                             <div class="tab-content bg-morado-transparente" id="nav-tabContent">
                                                 <div class="tab-pane fade show active" id="nav-04" role="tabpanel" aria-labelledby="nav-04-tab">
                                                     <div class="row p-5">
-                                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-5.svg"></div>
+                                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-30.png"></div>
                                                         <div class="col-12 col-md-8 pr-5">
                                                             <p>Modelo o prototipo que reúne las características que se consideran perfectas en su género, especialmente el referido a la figura humana que reúne las proporciones ideales.</p>
                                                         </div>
@@ -855,7 +855,7 @@
                                                 </div>
                                                 <div class="tab-pane fade" id="nav-06" role="tabpanel" aria-labelledby="nav-06-tab">
                                                     <div class="row p-5">
-                                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-5.svg"></div>
+                                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-29.png"></div>
                                                         <div class="col-12 col-md-8 pr-5">
                                                             <p>Modelo o prototipo que reúne las características que se consideran perfectas en su género, especialmente el referido a la figura humana que reúne las proporciones ideales.</p>
                                                             <p class="mt-5">▪ Griegos Policleto y Lisipo canon de 7 y 7 ½ cabezas.</p>
@@ -865,7 +865,7 @@
                                                 </div>
                                                 <div class="tab-pane fade" id="nav-07" role="tabpanel" aria-labelledby="nav-07-tab">
                                                     <div class="row p-5">
-                                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-5.svg"></div>
+                                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-31.png"></div>
                                                         <div class="col-12 col-md-8 pr-5">
                                                             <p>Para calcular un cuadro de tallas completo se utiliza generalmente dos medidas anatómicas:</p>
                                                             <p class="mt-5">▪ La altura o estatura total </p>
@@ -1330,11 +1330,8 @@
                                                     <p><strong class="texto-morado">=</strong> </p>
                                                 </div>
                                                 <div class="col-5">
-                                                    <p>1/2 de brazo </p>
+                                                    <p>1/2 de brazo <span class="text-small">Esta medida sin tener en cuenta lo que corresponde a la muñeca (menos 5cms para todas las tallas).</span></p>
                                                 </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-12 mb-5"><span class="text-small">Esta medida sin tener en cuenta lo que corresponde a la muñeca (menos 5cms para todas las tallas).</span></div>
                                             </div>
                                             <div class="row">
                                                 <div class="col-5">
@@ -2229,6 +2226,16 @@
                                                                     <p>▪ Referencia.</p>
                                                                     <p>▪ Nombre de la pieza.</p>
                                                                     <p>▪ N° de veces a cortar.</p>
+                                                                    <h3 class="mt-5">Piquetes</h3><a href="media/documentos/Diapositivas53-60.pdf" target="_blank">
+                                                                        <div class="col-12 rounded bg-azul-claro">
+                                                                            <div class="row py-2 px-3">
+                                                                                <div class="col align-self-center"> <img class="img-fluid" src="assets/images/icons/anexo-button.svg"></div>
+                                                                                <div class="col-9 align-self-center">
+                                                                                    <p><strong>Recurso.</strong> Almohada de corazón</p>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </a>
                                                                 </div>
                                                                 <div class="col-12 col-md-5 mt-5">
                                                                     <h3 class="mb-0">Tipo de material </h3>
@@ -2245,19 +2252,8 @@
                                                                     <p>▪ N° de veces a cortar.</p>
                                                                     <p>▪ Tipo de material</p>
                                                                     <p>▪ N° de pieza en el tendido</p>
-                                                                    <h3 class="mt-5">Piquetes</h3>
                                                                 </div>
                                                             </div>
-                                                            <div class="row mt-5 pl-4"><a href="media/documentos/Diapositivas53-60.pdf" target="_blank">
-                                                                    <div class="col-12 rounded bg-azul-claro">
-                                                                        <div class="row py-2 px-3">
-                                                                            <div class="col align-self-center"> <img class="img-fluid" src="assets/images/icons/anexo-button.svg"></div>
-                                                                            <div class="col-9 align-self-center">
-                                                                                <p><strong>Recurso.</strong> Almohada de corazón</p>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -3754,7 +3750,7 @@
                                                     <p><strong>Apariencia</strong> de la pulgada</p>
                                                 </div>
                                                 <div class="col-8 col-md-5 mt-5 ml-md-3 pt-3 offset-2 rounded-pill bg-morado-ligero texto-naranja">
-                                                    <p><strong>Eslasticidad de la costura</strong> en telas</p>
+                                                    <p><strong>Elasticidad de la costura</strong> en telas</p>
                                                 </div>
                                             </div>
                                         </div>
