--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -732,7 +732,7 @@
                             <div class="tab-content bg-morado-transparente" id="nav-tabContent">
                                 <div class="tab-pane fade show active" id="nav-04" role="tabpanel" aria-labelledby="nav-04-tab">
                                     <div class="row p-5">
-                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-5.svg" /></div>
+                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-30.png" /></div>
                                         <div class="col-12 col-md-8 pr-5">
                                             <p>Modelo o prototipo que reúne las características que se consideran perfectas en su género, especialmente el referido a la figura humana que reúne las proporciones ideales.</p>
                                         </div>
@@ -749,7 +749,7 @@
                                 </div>
                                 <div class="tab-pane fade" id="nav-06" role="tabpanel" aria-labelledby="nav-06-tab">
                                     <div class="row p-5">
-                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-5.svg" /></div>
+                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-29.png" /></div>
                                         <div class="col-12 col-md-8 pr-5">
                                             <p>Modelo o prototipo que reúne las características que se consideran perfectas en su género, especialmente el referido a la figura humana que reúne las proporciones ideales.</p>
                                             <p class="mt-5">▪ Griegos Policleto y Lisipo canon de 7 y 7 ½ cabezas.</p>
@@ -759,7 +759,7 @@
                                 </div>
                                 <div class="tab-pane fade" id="nav-07" role="tabpanel" aria-labelledby="nav-07-tab">
                                     <div class="row p-5">
-                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-5.svg" /></div>
+                                        <div class="col-12 col-md-4"><img class="img-fluid" src="assets/images/pages/tema-3/tema-3-31.png" /></div>
                                         <div class="col-12 col-md-8 pr-5">
                                             <p>Para calcular un cuadro de tallas completo se utiliza generalmente dos medidas anatómicas:</p>
                                             <p class="mt-5">▪ La altura o estatura total </p>
@@ -1224,11 +1224,8 @@
                                     <p><strong class="texto-morado">=</strong> </p>
                                 </div>
                                 <div class="col-5">
-                                    <p>1/2 de brazo </p>
+                                    <p>1/2 de brazo <span class="text-small">Esta medida sin tener en cuenta lo que corresponde a la muñeca (menos 5cms para todas las tallas).</span></p>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 mb-5"><span class="text-small">Esta medida sin tener en cuenta lo que corresponde a la muñeca (menos 5cms para todas las tallas).</span></div>
                             </div>
                             <div class="row">
                                 <div class="col-5">
@@ -2123,6 +2120,16 @@
                                                     <p>▪ Referencia.</p>
                                                     <p>▪ Nombre de la pieza.</p>
                                                     <p>▪ N° de veces a cortar.</p>
+                                                    <h3 class="mt-5">Piquetes</h3><a href="media/documentos/Diapositivas53-60.pdf" target="_blank">
+                                                        <div class="col-12 rounded bg-azul-claro">
+                                                            <div class="row py-2 px-3">
+                                                                <div class="col align-self-center"> <img class="img-fluid" src="assets/images/icons/anexo-button.svg" /></div>
+                                                                <div class="col-9 align-self-center">
+                                                                    <p><strong>Recurso.</strong> Almohada de corazón</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
                                                 </div>
                                                 <div class="col-12 col-md-5 mt-5">
                                                     <h3 class="mb-0">Tipo de material </h3>
@@ -2139,19 +2146,8 @@
                                                     <p>▪ N° de veces a cortar.</p>
                                                     <p>▪ Tipo de material</p>
                                                     <p>▪ N° de pieza en el tendido</p>
-                                                    <h3 class="mt-5">Piquetes</h3>
                                                 </div>
                                             </div>
-                                            <div class="row mt-5 pl-4"><a href="media/documentos/Diapositivas53-60.pdf" target="_blank">
-                                                    <div class="col-12 rounded bg-azul-claro">
-                                                        <div class="row py-2 px-3">
-                                                            <div class="col align-self-center"> <img class="img-fluid" src="assets/images/icons/anexo-button.svg" /></div>
-                                                            <div class="col-9 align-self-center">
-                                                                <p><strong>Recurso.</strong> Almohada de corazón</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </a></div>
                                         </div>
                                     </div>
                                 </div>
