--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                                     <li class="list-group-item nav-tema-item">
                                         <div class="row align-items-center">
                                             <div class="col-auto">
-                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold">0</span></div>
+                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold"> <i class="fa fa-file-text-o"></i></span></div>
                                             </div>
                                             <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/tema-1/">Introducción</a></span></div>
                                             <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/tema-1/">Ver más</a></div>
