--- a/public/pages/tema-2.html
+++ b/public/pages/tema-2.html
@@ -1093,7 +1093,7 @@
                                     <p><strong>Apariencia</strong> de la pulgada</p>
                                 </div>
                                 <div class="col-8 col-md-5 mt-5 ml-md-3 pt-3 offset-2 rounded-pill bg-morado-ligero texto-naranja">
-                                    <p><strong>Eslasticidad de la costura</strong> en telas</p>
+                                    <p><strong>Elasticidad de la costura</strong> en telas</p>
                                 </div>
                             </div>
                         </div>
