--- a/public/pages/referencias.html
+++ b/public/pages/referencias.html
@@ -9,7 +9,7 @@
         <hr />
         <p>Gutiérrez, L. y Moncayo, A. (2011). Manual de patronaje básico e interpretación de diseños. Bogotá: SENA, Japan Inernational Cooperation Agency jica, 2011. </p>
         <hr />
-        <p>Pulgarín, B. y Ulloa, J. (1998). La evolución de las máquinas y su aplicación en la industria de la confección Colombiana. <a class="ml-2" href="https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660" target="_blank">https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660</a></p>
+        <p>Pulgarín, B. y Ulloa, J. (1998). La evolución de las máquinas y su aplicación en la industria de la confección Colombiana. <a class="ml-2 linkRef" href="https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660" target="_blank">https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660</a></p>
         <hr />
         <div class="row justify-content-between align-items-center">
             <div class="col-12 col-md-5 my-4">
